--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
       "elm-watch": "^1.2.0-beta.3",
       "esbuild": "0.15.18",
       "uglify-js": "3.17.4"
+   },
+   "dependencies": {
+      "elm-optimize-level-2": "^0.3.5"
    }
 }
