--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
       "postinstall": "elm-tooling install",
       "start": "elm-watch hot",
       "build": "elm-watch make --optimize",
+      "server": "python -m http.server 8421 --bind 127.0.0.12 --directory build",
       "dev": "npm --prefix .. run build && elm-watch hot"
    },
    "devDependencies": {
-      "elm-tooling": "1.12.0",
-      "elm-watch": "^1.2.0-beta.3",
-      "esbuild": "0.15.18",
+      "elm-tooling": "1.15.0",
+      "elm-watch": "^1.2.0-beta.5",
+      "esbuild": "0.19.11",
       "uglify-js": "3.17.4"
    },
    "dependencies": {
