--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "dev": "npm --prefix .. run build && elm-watch hot"
    },
    "devDependencies": {
+      "elm-test": "^0.19.1-revision9",
       "elm-tooling": "1.15.0",
       "elm-watch": "^1.2.0-beta.5",
       "esbuild": "0.19.11",
