--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
    "private": true,
    "type": "module",
    "name": "example",
+   "directories": {
+      "test": "tests"
+   },
    "scripts": {
+      "test": "elm-test",
       "postinstall": "elm-tooling install",
       "start": "elm-watch hot",
       "build": "elm-watch make --optimize",
@@ -11,7 +15,7 @@
    },
    "devDependencies": {
       "elm-test": "^0.19.1-revision9",
-      "elm-tooling": "1.15.0",
+      "elm-tooling": "^1.15.1",
       "elm-watch": "^1.2.0-beta.5",
       "esbuild": "0.19.11",
       "uglify-js": "3.17.4"
